Fix watchlist item text overflow

--- a/app/stylesheets/builtin-pages/watchlist.less
+++ b/app/stylesheets/builtin-pages/watchlist.less
@@ -120,6 +120,9 @@ body.drag {
     .watchlist-item-title {
       flex: 3;
       max-width: none;
+      white-space : nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     .date {
